--- a/webclient/config/lighttpd.conf
+++ b/webclient/config/lighttpd.conf
@@ -2,21 +2,21 @@
 # Start using ./script/server lighttpd
 
 server.bind = "0.0.0.0"
-server.port = 3001
+#server.port = 3001
 
 server.modules           = ( "mod_rewrite", "mod_accesslog", "mod_fastcgi", "mod_compress", "mod_expire" )
 
 server.error-handler-404 = "/dispatch.fcgi"
-server.pid-file          = CWD + "/tmp/pids/lighttpd.pid"
-server.document-root     = CWD + "/public/"
+server.pid-file          = "/srv/www/yast/tmp/pids/lighttpd.pid"
+server.document-root     = "/srv/www/yast/public/"
 
-server.errorlog          = CWD + "/log/lighttpd.error.log"
-accesslog.filename       = CWD + "/log/lighttpd.access.log"
+server.errorlog          = "/srv/www/yast/log/lighttpd.error.log"
+accesslog.filename       = "/srv/www/yast/log/lighttpd.access.log"
 
 url.rewrite              = ( "^/$" => "index.html", "^([^.]+)$" => "$1.html" )
 
 compress.filetype        = ( "text/plain", "text/html", "text/css", "text/javascript" )
-compress.cache-dir       = CWD + "/tmp/cache"
+compress.cache-dir       = "/srv/www/yast/tmp/cache"
 
 expire.url               = ( "/favicon.ico"  => "access 3 days", 
                              "/images/"      => "access 3 days", 
@@ -29,8 +29,8 @@ expire.url               = ( "/favicon.ico"  => "access 3 days",
 fastcgi.server      = ( ".fcgi" => ( "localhost" => (
   "min-procs"       => 1, 
   "max-procs"       => 1,
-  "socket"          => CWD + "/tmp/sockets/fcgi.socket",
-  "bin-path"        => CWD + "/public/dispatch.fcgi",
+  "socket"          => "/srv/www/yast/tmp/sockets/fcgi.socket",
+  "bin-path"        => "/srv/www/yast/public/dispatch.fcgi",
   "bin-environment" => ( "RAILS_ENV" => "development" )
 ) ) )
 
