running server and client at the same time

--- a/webclient/config/lighttpd.conf
+++ b/webclient/config/lighttpd.conf
@@ -4,6 +4,13 @@
 server.bind = "0.0.0.0"
 #server.port = 3001
 
+##
+## Run as a different username/groupname.
+## This requires root permissions during startup. 
+##
+server.username  = "lighttpd"
+server.groupname = "lighttpd"
+
 server.modules           = ( "mod_rewrite", "mod_accesslog", "mod_fastcgi", "mod_compress", "mod_expire" )
 
 server.error-handler-404 = "/dispatch.fcgi"
