--- a/webclient/config/lighttpd.conf
+++ b/webclient/config/lighttpd.conf
@@ -1,6 +1,21 @@
 # Default configuration file for the lighttpd web server
 # Start using ./script/server lighttpd
 
+#######################################################################
+##
+## Some Variable definition which will make chrooting easier.
+##
+## if you add a variable here. Add the corresponding variable in the
+## chroot example aswell.
+##
+var.state_dir   = "/var/run"
+
+#######################################################################
+##
+##  Basic Configuration
+## ---------------------
+##
+#server.port = 80
 server.bind = "0.0.0.0"
 #server.port = 3001
 
@@ -10,6 +25,26 @@ server.bind = "0.0.0.0"
 ##
 server.username  = "lighttpd"
 server.groupname = "lighttpd"
+
+##
+## Time to read from a socket before we consider it idle.
+##
+## Default: 60
+##
+server.max-read-idle = 120
+
+##
+## Time to write to a socket before we consider it idle.
+##
+## Default: 360
+##
+#server.max-write-idle = 360
+
+##
+## store a pid file
+##
+server.pid-file = state_dir + "/yastwebc.pid"
+
 
 server.modules           = ( "mod_rewrite", "mod_accesslog", "mod_fastcgi", "mod_compress", "mod_expire" )
 
