--- a/webclient/config/lighttpd.conf
+++ b/webclient/config/lighttpd.conf
@@ -43,7 +43,7 @@ server.max-read-idle = 120
 ##
 ## store a pid file
 ##
-server.pid-file = state_dir + "/yastwebc.pid"
+server.pid-file = state_dir + "/yastwc.pid"
 
 
 server.modules           = ( "mod_rewrite", "mod_accesslog", "mod_fastcgi", "mod_compress", "mod_expire" )
