--- a/plugins/users/Rakefile
+++ b/plugins/users/Rakefile
@@ -44,7 +44,7 @@ end
 desc "Update pot/po files to match new version."
 task :updatepo do
   require 'gettext_rails/tools'
-  GetText.update_pofiles("yast_webclient", Dir.glob("{app,lib}/**/*.{rb,erb,rhtml}"),
-                         "yast_webclient 1.0.0")
+  GetText.update_pofiles("yast_webclient_users", Dir.glob("{app,lib}/**/*.{rb,erb,rhtml}"),
+                         "yast_webclient users 1.0.0")
 end
 
