--- a/plugins/users/Rakefile
+++ b/plugins/users/Rakefile
@@ -29,6 +29,7 @@ Rake::PackageTask.new('www', :noversion) do |p|
   p.package_dir = 'package'
   p.package_files.include('**/*')
   p.package_files.exclude('package')
+  p.package_files.exclude('locale')
 end
 
 #
