--- a/plugins/language/Rakefile
+++ b/plugins/language/Rakefile
@@ -31,6 +31,7 @@ Rake::PackageTask.new('www', :noversion) do |p|
   p.package_files.include('**/*')
   p.package_files.exclude('package')
   p.package_files.exclude('locale')
+  p.package_files.exclude('nbproject')
 end
 
 desc "Create mo-files for L10n"
