--- a/plugins/language/Rakefile
+++ b/plugins/language/Rakefile
@@ -2,17 +2,12 @@ require 'rake'
 require 'rake/testtask'
 require 'rake/rdoctask'
 require 'rake/packagetask'
+require File.join(File.dirname(__FILE__), 'config', 'rails_parent')
+require File.join(RailsParent.parent, 'config', 'boot')
+require 'tasks/rails'
 
 desc 'Default: run unit tests.'
 task :default => :test
-
-desc 'Test the language plugin.'
-Rake::TestTask.new(:test) do |t|
-  t.libs << 'lib'
-  t.libs << 'test'
-  t.pattern = 'test/**/*_test.rb'
-  t.verbose = true
-end
 
 desc 'Generate documentation for the language plugin.'
 Rake::RDocTask.new(:rdoc) do |rdoc|
