--- a/plugins/patch_updates/Rakefile
+++ b/plugins/patch_updates/Rakefile
@@ -1,47 +1,10 @@
 require 'rake'
 require 'rake/testtask'
 require 'rake/rdoctask'
-require 'rake/packagetask'
+require File.join(File.dirname(__FILE__), 'config', 'rails_parent')
+require File.join(RailsParent.parent, 'config', 'boot')
+require 'tasks/rails'
 
 desc 'Default: run unit tests.'
 task :default => :test
 
-desc 'Test the patch plugin.'
-Rake::TestTask.new(:test) do |t|
-  t.libs << 'lib'
-  t.libs << 'test'
-  t.pattern = 'test/**/*_test.rb'
-  t.verbose = true
-end
-
-desc 'Generate documentation for the patch plugin.'
-Rake::RDocTask.new(:rdoc) do |rdoc|
-  rdoc.rdoc_dir = 'rdoc'
-  rdoc.title    = 'Patch Updates'
-  rdoc.options << '--line-numbers' << '--inline-source'
-  rdoc.rdoc_files.include('README')
-  rdoc.rdoc_files.include('lib/**/*.rb')
-end
-
-desc 'Generate tarball package'
-Rake::PackageTask.new('www', :noversion) do |p|
-  %x[rm -r package/www]
-  p.need_tar_bz2 = true
-  p.package_dir = 'package'
-  p.package_files.include('**/*')
-  p.package_files.exclude('package')
-  p.package_files.exclude('locale')
-end
-
-desc "Create mo-files for L10n"
-task :makemo do
-  require 'gettext_rails/tools'
-  GetText.create_mofiles
-end
-
-desc "Update pot/po files to match new version."
-task :updatepo do
-  require 'gettext_rails/tools'
-  GetText.update_pofiles("yast_webclient_patch_updates", Dir.glob("{app,lib}/**/*.{rb,erb,rhtml}"),
-                         "yast_webclient patch_updates 1.0.0")
-end
