--- a/plugins/services/shortcuts.yml
+++ b/plugins/services/shortcuts.yml
@@ -6,3 +6,12 @@ main:
   tags: [ init, script, service ]
   title: System Services
   description: Manage the LSB init scripts
+
+custom:
+# FIXME: use the correct icon
+  icon: '/icons/yast-online_update.png'
+  url: /services?custom=1
+  groups: [ Services ]
+  tags: [ init, script, service ]
+  title: Custom Services
+  description: Manage custom service
