remove Configure also from shortcut

--- a/plugins/systemtime/shortcuts.yml
+++ b/plugins/systemtime/shortcuts.yml
@@ -3,7 +3,7 @@ main:
   url: /systemtime
   groups: [ Other ]
   tags: [ time, clock, timezone, ntp]
-  title: Configure Time
+  title: Time
   description: Set the clock
   resources: [ systemtime ]
 
