Renamed "Configure network" to "Network" (bnc#539203).
and replaced user tags with network tags

--- a/plugins/network/shortcuts.yml
+++ b/plugins/network/shortcuts.yml
@@ -2,7 +2,7 @@ main:
   icon: '/icons/yast-network.png'
   url: /network
   groups: [ Network ]
-  tags: [ users, account, security, access]
-  title: Configure network
+  tags: [ LAN, NIC, TCP/IP, Internet, DNS, hostname, nameserver, route ]
+  title: Network
   description: Manage network devices
 
