--- a/webclient/config/lighttpd.conf
+++ b/webclient/config/lighttpd.conf
@@ -17,7 +17,7 @@ var.state_dir   = "/var/run"
 ##
 #server.port = 80
 server.bind = "0.0.0.0"
-#server.port = 3001
+server.port = 54984
 
 ##
 ## Run as a different username/groupname.
