rename title as it is requested by the styleguide; Bug 539201

--- a/plugins/users/shortcuts.yml
+++ b/plugins/users/shortcuts.yml
@@ -3,6 +3,6 @@ main:
   url: /users
   groups: [ Security ]
   tags: [ users, account, security, access]
-  title: Configure users
+  title: Users
   description: Manage user accounts
 
