It is called SSH, not Ssh (bnc#539206).

--- a/plugins/security/shortcuts.yml
+++ b/plugins/security/shortcuts.yml
@@ -3,6 +3,6 @@ main:
   url: /security
   groups: [ Security ]
   tags: [ security, access]
-  title: Firewall/Ssh
-  description: Setting firewall/ssh
+  title: Firewall/SSH
+  description: Setting firewall and Secure Shell
 
