let run webclient in production mode if use lighttp

--- a/webclient/config/lighttpd.conf
+++ b/webclient/config/lighttpd.conf
@@ -72,7 +72,7 @@ fastcgi.server      = ( ".fcgi" => ( "localhost" => (
   "max-procs"       => 1,
   "socket"          => "/srv/www/yast/tmp/sockets/fcgi.socket",
   "bin-path"        => "/srv/www/yast/public/dispatch.fcgi",
-  "bin-environment" => ( "RAILS_ENV" => "development" )
+  "bin-environment" => ( "RAILS_ENV" => "production" )
 ) ) )
 
 mimetype.assign = (  
