set absolute path to the icon
relative path caused missing icon in 'Show all' mode
in the control panel (bnc#547146)

version 0.0.3

--- a/plugins/custom_services/shortcuts.yml
+++ b/plugins/custom_services/shortcuts.yml
@@ -1,6 +1,6 @@
 main:
   # put your icon name here
-  icon: 'icons/custom-service.png'
+  icon: '/icons/custom-service.png'
   url: /services?custom=1
   groups: [ Services ]
   tags: [ init, script, service ]
