--- a/plugins/administrator/shortcuts.yml
+++ b/plugins/administrator/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '/icons/yast-users.png'
   url: /administrator
-  groups: [ Security ]
+  groups: [ Accounts ]
   tags: [ users, administrator, security]
   title:  Administrator Settings
   description: Manage system administrator
