--- a/plugins/mail_settings/shortcuts.yml
+++ b/plugins/mail_settings/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '/icons/yast-mail-server.png'
   url: /mail_settings
-  groups: [ Network ]
+  groups: [ Accounts ]
   tags: [ mail, network]
   title:  Mail Settings
   description: Manage outgoing mail settings
