--- a/plugins/patch_updates/shortcuts.yml
+++ b/plugins/patch_updates/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '/icons/yast-online_update.png'
   url: /patch_updates
-  groups: [ Security, Software ]
+  groups: [ System ]
   tags: [ security, software, updates, patches]
   title: Updates
   description: See and install updates
