--- a/plugins/permissions/shortcuts.yml
+++ b/plugins/permissions/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '/icons/yast-security.png'
   url: /permissions
-  groups: [ Security ]
+  groups: [ Accounts ]
   tags: [ users, account, security, access]
   title: User Permissions
   description: Set user permissions
