--- a/plugins/registration/shortcuts.yml
+++ b/plugins/registration/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '/icons/yast-product-registration.png'
   url: /registration
-  groups: [ Other ]
+  groups: [ System ]
   tags: [ registration ]
   title: Registration
   description: System Registration
