--- a/plugins/security/shortcuts.yml
+++ b/plugins/security/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '/icons/yast-security.png'
   url: /security
-  groups: [ Security ]
+  groups: [ Network ]
   tags: [ security, access]
   title: Firewall/SSH
   description: Setting firewall and Secure Shell
