--- a/plugins/status/shortcuts.yml
+++ b/plugins/status/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '/images/monitoring.png'
   url: /status
-  groups: [ Access ]
+  groups: [ System ]
   tags: [ access]
   title: Status
   description: Show system status
