--- a/plugins/systemtime/shortcuts.yml
+++ b/plugins/systemtime/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '/icons/yast-ntp-client.png'
   url: /systemtime
-  groups: [ Other ]
+  groups: [ System ]
   tags: [ time, clock, timezone, ntp]
   title: Time
   description: Set the clock
