--- a/plugins/users/shortcuts.yml
+++ b/plugins/users/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '/icons/yast-users.png'
   url: /users
-  groups: [ Security ]
+  groups: [ Accounts ]
   tags: [ users, account, security, access]
   title: Users
   description: Manage user accounts
