--- a/plugins/samba_server/shortcuts.yml
+++ b/plugins/samba_server/shortcuts.yml
@@ -2,7 +2,7 @@ main:
 # FIXME: use the correct icon
   icon: '/icons/yast-online_update.png'
   url: /samba_server
-  groups: [ Services, Network ]
+  groups: [ Network ]
   tags: [ samba, network, share ]
   title: Samba Shares
   description: Manage the exported directories via Samba service
