--- a/plugins/services/shortcuts.yml
+++ b/plugins/services/shortcuts.yml
@@ -2,7 +2,7 @@ main:
 # FIXME: use the correct icon
   icon: '/icons/yast-online_update.png'
   url: /services
-  groups: [ Services ]
+  groups: [ System ]
   tags: [ init, script, service ]
   title: System Services
   description: Manage the LSB init scripts
