UI fixes: custom services category

--- a/plugins/custom_services/shortcuts.yml
+++ b/plugins/custom_services/shortcuts.yml
@@ -2,7 +2,7 @@ main:
   # put your icon name here
   icon: '/icons/custom-service.png'
   url: /services?custom=1
-  groups: [ Services ]
+  groups: [ System ]
   tags: [ init, script, service ]
   # replace with own title and description
   title: Custom Service
