Initial https support

--- a/webclient/config/lighttpd.conf
+++ b/webclient/config/lighttpd.conf
@@ -93,3 +93,10 @@ mimetype.assign = (
 $HTTP["useragent"] =~ "^(.*MSIE.*)|(.*AppleWebKit.*)$" {
   server.max-keep-alive-requests = 0
 }
+
+
+# http://redmine.lighttpd.net/wiki/lighttpd/HowToSimpleSSL
+$SERVER["socket"] == ":54984" {
+  ssl.engine = "enable" 
+  ssl.pemfile = "/etc/lighttpd/certs/webyast.pem" 
+}
