Fix https setup
- enable ssl by default, just open a single port
- fix ownership of .pem file

--- a/webclient/config/lighttpd.conf
+++ b/webclient/config/lighttpd.conf
@@ -19,6 +19,9 @@ var.state_dir   = "/var/run"
 server.bind = "0.0.0.0"
 server.port = 54984
 
+ssl.engine = "enable" 
+ssl.pemfile = "/etc/lighttpd/certs/webyast.pem" 
+
 ##
 ## Run as a different username/groupname.
 ## This requires root permissions during startup. 
@@ -96,7 +99,7 @@ $HTTP["useragent"] =~ "^(.*MSIE.*)|(.*AppleWebKit.*)$" {
 
 
 # http://redmine.lighttpd.net/wiki/lighttpd/HowToSimpleSSL
-$SERVER["socket"] == ":54984" {
-  ssl.engine = "enable" 
-  ssl.pemfile = "/etc/lighttpd/certs/webyast.pem" 
-}
+#$SERVER["socket"] == ":443" {
+#  ssl.engine = "enable" 
+#  ssl.pemfile = "/etc/lighttpd/certs/webyast.pem" 
+#}
