UI fixes: consistent icons

--- a/plugins/custom_services/shortcuts.yml
+++ b/plugins/custom_services/shortcuts.yml
@@ -1,6 +1,6 @@
 main:
   # put your icon name here
-  icon: '/icons/custom-service.png'
+  icon: '/icons/yast-system-files.png'
   url: /services?custom=1
   groups: [ System ]
   tags: [ init, script, service ]
