--- a/plugins/security/shortcuts.yml
+++ b/plugins/security/shortcuts.yml
@@ -1,5 +1,5 @@
 main:
-  icon: '/icons/yast-security.png'
+  icon: '/icons/yast-firewall.png'
   url: /security
   groups: [ Network ]
   tags: [ security, access]
