--- a/plugins/services/shortcuts.yml
+++ b/plugins/services/shortcuts.yml
@@ -1,6 +1,6 @@
 main:
 # FIXME: use the correct icon
-  icon: '/icons/yast-online_update.png'
+  icon: '/icons/yast-system.png'
   url: /services
   groups: [ System ]
   tags: [ init, script, service ]
