--- a/plugins/administrator/shortcuts.yml
+++ b/plugins/administrator/shortcuts.yml
@@ -1,5 +1,5 @@
 main:
-  icon: '/icons/yast-users.png'
+  icon: '/icons/yast-system-user.png'
   url: /administrator
   groups: [ Accounts ]
   tags: [ users, administrator, security]
