after logout show again login screen on appliance (bnc#553250)

--- a/webclient/config/lighttpd.conf
+++ b/webclient/config/lighttpd.conf
@@ -15,12 +15,31 @@ var.state_dir   = "/var/run"
 ##  Basic Configuration
 ## ---------------------
 ##
+# cannot use together with SERVER[socket] so change ip or socket there
 #server.port = 80
-server.bind = "0.0.0.0"
-server.port = 54984
 
-ssl.engine = "enable" 
-ssl.pemfile = "/etc/lighttpd/certs/webyast.pem" 
+#automatic redirect http to https
+$HTTP["scheme"] == "http" {
+  $HTTP["host"] =~ "(.*)" {
+    url.redirect = ("(.*)" => "https://%1")
+  }
+#place where you can change ip or socket
+} else $SERVER["socket"] == "0.0.0.0:54984" {
+  ssl.engine = "enable" 
+  ssl.pemfile = "/etc/lighttpd/certs/webyast.pem" 
+}
+
+## RAILS settings
+# Change *-procs to 2 if you need to use Upload Progress or other tasks that
+# *need* to execute a second request while the first is still pending.
+fastcgi.server      = ( ".fcgi" => ( "localhost" => (
+  "min-procs"       => 1, 
+  "max-procs"       => 1,
+  "socket"          => "/srv/www/yast/tmp/sockets/fcgi.socket",
+  "bin-path"        => "/srv/www/yast/public/dispatch.fcgi",
+  "bin-environment" => ( "RAILS_ENV" => "production" )
+) ) )
+
 
 ##
 ## Run as a different username/groupname.
@@ -49,7 +68,7 @@ server.max-read-idle = 120
 server.pid-file = state_dir + "/yastwc.pid"
 
 
-server.modules           = ( "mod_rewrite", "mod_accesslog", "mod_fastcgi", "mod_compress", "mod_expire" )
+server.modules           = ( "mod_rewrite", "mod_accesslog", "mod_fastcgi", "mod_compress", "mod_expire","mod_redirect" )
 
 server.error-handler-404 = "/dispatch.fcgi"
 server.document-root     = "/srv/www/yast/public/"
@@ -68,15 +87,6 @@ expire.url               = ( "/favicon.ico"  => "access 3 days",
                              "/javascripts/" => "access 3 days" )
 
 
-# Change *-procs to 2 if you need to use Upload Progress or other tasks that
-# *need* to execute a second request while the first is still pending.
-fastcgi.server      = ( ".fcgi" => ( "localhost" => (
-  "min-procs"       => 1, 
-  "max-procs"       => 1,
-  "socket"          => "/srv/www/yast/tmp/sockets/fcgi.socket",
-  "bin-path"        => "/srv/www/yast/public/dispatch.fcgi",
-  "bin-environment" => ( "RAILS_ENV" => "production" )
-) ) )
 
 mimetype.assign = (  
   ".css"        =>  "text/css",
@@ -96,6 +106,7 @@ mimetype.assign = (
 $HTTP["useragent"] =~ "^(.*MSIE.*)|(.*AppleWebKit.*)$" {
   server.max-keep-alive-requests = 0
 }
+
 
 
 # http://redmine.lighttpd.net/wiki/lighttpd/HowToSimpleSSL
