taking the correct image for controll center

--- a/plugins/permissions/shortcuts.yml
+++ b/plugins/permissions/shortcuts.yml
@@ -1,5 +1,5 @@
 main:
-  icon: '/icons/yast-security.png'
+  icon: '/icons/yast-permissions.png'
   url: /permissions
   groups: [ Accounts ]
   tags: [ users, account, security, access]
