adjusted layout of edit users

--- a/plugins/security/shortcuts.yml
+++ b/plugins/security/shortcuts.yml
@@ -2,7 +2,7 @@ main:
   icon: '/icons/yast-firewall.png'
   url: /security
   groups: [ Network ]
-  tags: [ security, access]
+  tags: [ access, security ]
   title: Firewall/SSH
   description: Setting firewall and Secure Shell
 
