--- a/plugins/services/shortcuts.yml
+++ b/plugins/services/shortcuts.yml
@@ -1,8 +1,8 @@
+# This plugin is actually excluded from the menu, to re-enable it, uncomment the lines.
 main:
-# FIXME: use the correct icon
-  icon: '/icons/yast-system.png'
-  url: /services
-  groups: [ System ]
-  tags: [ init, script, service ]
-  title: System Services
-  description: Manage the LSB init scripts
+#  icon: '/icons/yast-system.png'
+#  url: /services
+#  groups: [ System ]
+#  tags: [ init, script, service ]
+#  title: System Services
+#  description: Manage the LSB init scripts
