- different fix of bnc#557131: install shortcuts.yml as disabled - 0.0.14

--- a/plugins/services/shortcuts.yml
+++ b/plugins/services/shortcuts.yml
@@ -1,8 +1,8 @@
-# This plugin is actually excluded from the menu, to re-enable it, uncomment the lines.
+# This plugin is excluded from the menu, to re-enable it, rename this file to shortcuts.yml
 main:
-#  icon: '/icons/yast-system.png'
-#  url: /services
-#  groups: [ System ]
-#  tags: [ init, script, service ]
-#  title: System Services
-#  description: Manage the LSB init scripts
+  icon: '/icons/yast-system.png'
+  url: /services
+  groups: [ System ]
+  tags: [ init, script, service ]
+  title: System Services
+  description: Manage the LSB init scripts
