--- a/plugins/patch_updates/shortcuts.yml
+++ b/plugins/patch_updates/shortcuts.yml
@@ -5,3 +5,11 @@ main:
   tags: [ security, software, updates, patches]
   title: Updates
   description: See and install updates
+
+repositories:
+  icon: '/icons/yast-sw_source.png'
+  url: /repositories
+  groups: [ System ]
+  tags: [ software, repositories ]
+  title: Software Repositories
+  description: See and manage configured software repositories
