--- a/plugins/mail/shortcuts.yml
+++ b/plugins/mail/shortcuts.yml
@@ -1,6 +1,6 @@
 main:
   icon: '/icons/yast-mail-server.png'
-  url: /mail_settings
+  url: /mail
   groups: [ Accounts ]
   tags: [ mail, network]
   title:  Mail Settings
