--- a/plugins/time/shortcuts.yml
+++ b/plugins/time/shortcuts.yml
@@ -1,9 +1,9 @@
 main:
   icon: '/icons/yast-ntp-client.png'
-  url: /systemtime
+  url: /time
   groups: [ System ]
   tags: [ time, clock, timezone, ntp]
   title: Time
   description: Set the clock
-  resources: [ systemtime ]
+  resources: [ time ]
 
