--- a/plugins/users/shortcuts.yml
+++ b/plugins/users/shortcuts.yml
@@ -6,3 +6,11 @@ main:
   title: Users
   description: Manage user accounts
 
+groups:
+  icon: '/icons/yast-groups.png'
+  url: /groups
+  groups: [ Accounts ]
+  tags: [ groups, account, security, access]
+  title: Groups
+  description: Manage groups
+
