use icon from users

--- a/plugins/users/shortcuts.yml
+++ b/plugins/users/shortcuts.yml
@@ -7,7 +7,7 @@ main:
   description: Manage user accounts
 
 groups:
-  icon: '/icons/yast-groups.png'
+  icon: '/icons/yast-users.png'
   url: /groups
   groups: [ Accounts ]
   tags: [ groups, account, security, access]
