base - updated control panel default refresh time
check patches after 8 hours, check status every 5 minutes
- 0.1.19

--- a/webclient/package/control_panel.yml
+++ b/webclient/package/control_panel.yml
@@ -3,13 +3,13 @@
 --- 
 # timeout before automatic reloading of patches status (in seconds)
 # value 0 disables automatic reload
-# default: 864000 seconds = 24 hours
-patch_status_timeout: 86400
+# default: 28800 seconds = 8 hours
+patch_status_timeout: 28800
 
 # timeout before automatic reloading of patches status (in seconds)
 # value 0 disables automatic reload
-# default: 60 seconds = 1 minute
-system_status_timeout: 60
+# default: 300 seconds = 5 minutes
+system_status_timeout: 300
 
 # display patches status in the status header
 # default: true
