add commented about possible killing rails when ligghttp idling

--- a/webclient/config/lighttpd.conf
+++ b/webclient/config/lighttpd.conf
@@ -76,6 +76,7 @@ fastcgi.server      = ( ".fcgi" => ( "localhost" => (
   "socket"          => "/srv/www/yast/tmp/sockets/fcgi.socket",
   "bin-path"        => "/srv/www/yast/public/dispatch.fcgi",
   "bin-environment" => ( "RAILS_ENV" => "production" )
+#  "idle-timeout"   => 3600 #kill rails if noone use it for 1 hour FIXME test it before enable
 ) ) )
 
 mimetype.assign = (  
