added a mechanism for translated YAML files

--- a/plugins/services/shortcuts.yml
+++ b/plugins/services/shortcuts.yml
@@ -4,5 +4,5 @@ main:
   url: /services
   groups: [ System ]
   tags: [ init, script, service ]
-  title: System Services
-  description: Manage the LSB init scripts
+  title: _("System Services")
+  description: _("Manage the LSB init scripts")
