added translation tags

--- a/plugins/administrator/shortcuts.yml
+++ b/plugins/administrator/shortcuts.yml
@@ -3,6 +3,6 @@ main:
   url: /administrator
   groups: [ Accounts ]
   tags: [ users, administrator, security]
-  title:  Administrator Settings
-  description: Manage system administrator
+  title:  _("Administrator Settings")
+  description: _("Manage system administrator")
 
