--- a/plugins/custom_services/shortcuts.yml
+++ b/plugins/custom_services/shortcuts.yml
@@ -5,5 +5,5 @@ main:
   groups: [ System ]
   tags: [ init, script, service ]
   # replace with own title and description
-  title: Custom Service
-  description: Manage custom service
+  title: _("Custom Service")
+  description: _("Manage custom service")
