--- a/plugins/firewall/shortcuts.yml
+++ b/plugins/firewall/shortcuts.yml
@@ -3,6 +3,6 @@ main:
   url: /firewall
   groups: [ Network ]
   tags: [ access, security, firewall ]
-  title: Firewall
-  description: Firewall settings
+  title: _("Firewall")
+  description: _("Firewall settings")
 
