--- a/plugins/mail/shortcuts.yml
+++ b/plugins/mail/shortcuts.yml
@@ -3,6 +3,6 @@ main:
   url: /mail
   groups: [ Accounts ]
   tags: [ mail, network]
-  title:  Mail Settings
-  description: Manage outgoing mail settings
+  title:  _("Mail Settings")
+  description: _("Manage outgoing mail settings")
 
