--- a/plugins/network/shortcuts.yml
+++ b/plugins/network/shortcuts.yml
@@ -3,6 +3,6 @@ main:
   url: /network
   groups: [ Network ]
   tags: [ LAN, NIC, TCP/IP, Internet, DNS, hostname, nameserver, route ]
-  title: Network
-  description: Manage network devices
+  title: _("Network")
+  description: _("Manage network devices")
 
