--- a/plugins/permissions/shortcuts.yml
+++ b/plugins/permissions/shortcuts.yml
@@ -3,7 +3,7 @@ main:
   url: /permissions
   groups: [ Accounts ]
   tags: [ users, account, security, access]
-  title: User Permissions
-  description: Set user permissions
+  title: _("User Permissions")
+  description: _("Set user permissions")
   resources: [ permissions ]
 
