--- a/plugins/roles/shortcuts.yml
+++ b/plugins/roles/shortcuts.yml
@@ -3,7 +3,7 @@ main:
   url: /roles
   groups: [ System ]
   tags: [ roles ]
-  title: Roles
-  description: Set permissions in roles and assign users to roles
+  title: _("Roles")
+  description: _("Set permissions in roles and assign users to roles")
   resources: [ roles ]
 
