--- a/plugins/software/shortcuts.yml
+++ b/plugins/software/shortcuts.yml
@@ -11,5 +11,5 @@ repositories:
   url: /repositories
   groups: [ System ]
   tags: [ software, repositories ]
-  title: Software Repositories
-  description: See and manage configured software repositories
+  title: _("Software Repositories")
+  description: _("See and manage configured software repositories")
