--- a/plugins/status/shortcuts.yml
+++ b/plugins/status/shortcuts.yml
@@ -3,7 +3,7 @@ main:
   url: /status
   groups: [ System ]
   tags: [ access]
-  title: Status
-  description: Show system status
+  title: _("Status")
+  description: _("Show system status")
   resources: [ status ]
 
