--- a/plugins/time/shortcuts.yml
+++ b/plugins/time/shortcuts.yml
@@ -3,7 +3,7 @@ main:
   url: /time
   groups: [ System ]
   tags: [ time, clock, timezone, ntp]
-  title: Time
-  description: Set the clock
+  title: _("Time")
+  description: _("Set the clock")
   resources: [ time ]
 
