--- a/plugins/users/shortcuts.yml
+++ b/plugins/users/shortcuts.yml
@@ -3,14 +3,14 @@ main:
   url: /users
   groups: [ Accounts ]
   tags: [ users, account, security, access]
-  title: Users
-  description: Manage user accounts
+  title: _("Users")
+  description: _("Manage user accounts")
 
 groups:
   icon: '/icons/yast-groups.png'
   url: /groups
   groups: [ Accounts ]
   tags: [ groups, account, security, access]
-  title: Groups
-  description: Manage groups
+  title: _("Groups")
+  description: _("Manage groups")
 
