--- a/plugins/registration/shortcuts.yml
+++ b/plugins/registration/shortcuts.yml
@@ -3,7 +3,7 @@ main:
   url: /registration
   groups: [ System ]
   tags: [ registration ]
-  title: Registration
-  description: System Registration
+  title: _("Registration")
+  description: _("System Registration")
   resources: [ registration ]
 
