.gitignore - ignore generated *.css files and sass cache dir

--- a/webclient/.gitignore
+++ b/webclient/.gitignore
@@ -6,3 +6,7 @@ diff.diff
 coverage
 package/www.tar.bz2
 package/www
+.sass-cache/
+public/stylesheets/jquery-ui-1.7.2.custom-accordion.css
+public/stylesheets/jquery-ui-1.7.2.custom-tabs.css
+public/stylesheets/style.css
