- check for server exceptions - include the icon

--- a/plugins/activedirectory/shortcuts.yml
+++ b/plugins/activedirectory/shortcuts.yml
@@ -1,5 +1,5 @@
 main:
-  icon: '/icons/yast-users.png'
+  icon: '../icons/yast-samba-client.png'
   url: /activedirectory
   groups: [ System ]
   tags: [ AD, Samba, Active Directory ]
