--- a/webclient/config/lighttpd.conf
+++ b/webclient/config/lighttpd.conf
@@ -64,6 +64,7 @@ compress.cache-dir       = "/srv/www/yast/tmp/cache"
 
 expire.url               = ( "/favicon.ico"  => "access 3 days", 
                              "/images/"      => "access 3 days", 
+                             "/icons/"       => "access 3 days",
                              "/stylesheets/" => "access 3 days",
                              "/javascripts/" => "access 3 days" )
 
