webclient: modify sass:update task to work with sles11sp1 haml package

--- a/webclient/Rakefile
+++ b/webclient/Rakefile
@@ -46,7 +46,7 @@ namespace :sass do
   desc 'Updates stylesheets if necessary from their Sass templates.'
   task :update do
     require 'sass/plugin'
-    Sass::Plugin.add_template_location "app/sass"
+    Sass::Plugin.options = { :template_location => "app/sass" }
     Sass::Plugin.update_stylesheets
   end
 end
