add information about permissions needed to run moduls to shortcuts

--- a/plugins/administrator/shortcuts.yml
+++ b/plugins/administrator/shortcuts.yml
@@ -5,4 +5,5 @@ main:
   tags: [ users, administrator, security]
   title:  _("Administrator Settings")
   description: _("Manage system administrator")
+  read_permissions: [ org.opensuse.yast.modules.yapi.administrator.read ]
 
