--- a/plugins/firewall/shortcuts.yml
+++ b/plugins/firewall/shortcuts.yml
@@ -5,4 +5,4 @@ main:
   tags: [ access, security, firewall ]
   title: _("Firewall")
   description: _("Firewall settings")
-
+  read_permissions: [ org.opensuse.yast.modules.yapi.firewall.read ]
