--- a/plugins/ldap/shortcuts.yml
+++ b/plugins/ldap/shortcuts.yml
@@ -5,3 +5,4 @@ main:
   tags: [ ldap ]
   title: LDAP Client
   description: Configure LDAP client
+  read_permissions: [ org.opensuse.yast.modules.yapi.ldap.read ]
