--- a/plugins/network/shortcuts.yml
+++ b/plugins/network/shortcuts.yml
@@ -5,4 +5,4 @@ main:
   tags: [ LAN, NIC, TCP/IP, Internet, DNS, hostname, nameserver, route ]
   title: _("Network")
   description: _("Manage network devices")
-
+  read_permissions: [ org.opensuse.yast.modules.yapi.network.read ]
