--- a/plugins/registration/shortcuts.yml
+++ b/plugins/registration/shortcuts.yml
@@ -6,4 +6,5 @@ main:
   title: _("Registration")
   description: _("System Registration")
   resources: [ registration ]
+  read_permissions: [ org.opensuse.yast.modules.ysr.getregistrationconfig ]
 
