--- a/plugins/roles/shortcuts.yml
+++ b/plugins/roles/shortcuts.yml
@@ -6,4 +6,4 @@ main:
   title: _("Roles")
   description: _("Set permissions in roles and assign users to roles")
   resources: [ roles ]
-
+  read_permissions: [ org.opensuse.yast.permissions.read ]
