--- a/plugins/services/shortcuts.yml
+++ b/plugins/services/shortcuts.yml
@@ -6,3 +6,4 @@ main:
   tags: [ init, script, service ]
   title: _("System Services")
   description: _("Manage the LSB init scripts")
+  read_permissions: [ org.opensuse.yast.modules.yapi.services.read ]
