--- a/plugins/time/shortcuts.yml
+++ b/plugins/time/shortcuts.yml
@@ -6,4 +6,4 @@ main:
   title: _("Time")
   description: _("Set the clock")
   resources: [ time ]
-
+  read_permissions: [ org.opensuse.yast.modules.yapi.time.read ]
