--- a/plugins/activedirectory/shortcuts.yml
+++ b/plugins/activedirectory/shortcuts.yml
@@ -5,3 +5,4 @@ main:
   tags: [ AD, Samba, Active Directory ]
   title: Active Directory
   description: Configure the connection to Active Directory
+  read_permissions: [ org.opensuse.yast.modules.yapi.activedirectory.read ]
