--- a/plugins/mail/shortcuts.yml
+++ b/plugins/mail/shortcuts.yml
@@ -5,4 +5,5 @@ main:
   tags: [ mail, network]
   title:  _("Mail Settings")
   description: _("Manage outgoing mail settings")
+  read_permissions: [ org.opensuse.yast.modules.yapi.mailsettings.read ]
 
