--- a/plugins/software/shortcuts.yml
+++ b/plugins/software/shortcuts.yml
@@ -5,6 +5,7 @@ main:
   tags: [ security, software, updates, patches]
   title: Updates
   description: See and install updates
+  read_permissions: [ org.opensuse.yast.system.patches.read ]
 
 repositories:
   icon: '/icons/yast-sw_source.png'
@@ -13,3 +14,4 @@ repositories:
   tags: [ software, repositories ]
   title: _("Software Repositories")
   description: _("See and manage configured software repositories")
+  read_permissions: [ org.opensuse.yast.system.repositories.read ]
