--- a/plugins/status/shortcuts.yml
+++ b/plugins/status/shortcuts.yml
@@ -6,4 +6,4 @@ main:
   title: _("Status")
   description: _("Show system status")
   resources: [ status ]
-
+  read_permissions: [ org.opensuse.yast.system.status.read ]
