--- a/plugins/ldap/shortcuts.yml
+++ b/plugins/ldap/shortcuts.yml
@@ -3,6 +3,6 @@ main:
   url: /ldap
   groups: [ System ]
   tags: [ ldap ]
-  title: LDAP Client
+  title: LDAP
   description: Configure LDAP client
   read_permissions: [ org.opensuse.yast.modules.yapi.ldap.read ]
