- added task for CSS compression - set JSMIN constant in environment.rb to false if you want to use uncompressed css/javascripts files

--- a/webclient/Rakefile
+++ b/webclient/Rakefile
@@ -48,5 +48,7 @@ namespace :sass do
     require 'sass/plugin'
     Sass::Plugin.options = { :template_location => "app/sass" }
     Sass::Plugin.update_stylesheets
+    #run css minifier task after sass to css converter
+    Rake::Task['css:min'].invoke
   end
 end
