- check display_status for displaying status - make top label configurable ("My Appliance")

--- a/webclient/package/control_panel.yml
+++ b/webclient/package/control_panel.yml
@@ -15,6 +15,9 @@ system_status_timeout: 300
 # default: true
 display_patch_status: true
 
-# display patches status in the status header
+# display system status in the status header
 # default: true
 display_system_status: true
+
+# label shown at the top of each page
+appliance_label: _("My Appliance")
