- make shortcuts.yml strings translatable

--- a/plugins/activedirectory/shortcuts.yml
+++ b/plugins/activedirectory/shortcuts.yml
@@ -3,6 +3,6 @@ main:
   url: /activedirectory
   groups: [ System ]
   tags: [ AD, Samba, Active Directory ]
-  title: Active Directory
-  description: Configure the connection to Active Directory
+  title: _("Active Directory")
+  description: _("Configure the connection to Active Directory")
   read_permissions: [ org.opensuse.yast.modules.yapi.activedirectory.read ]
