--- a/plugins/kerberos/shortcuts.yml
+++ b/plugins/kerberos/shortcuts.yml
@@ -3,6 +3,6 @@ main:
   url: /kerberos
   groups: [ System ]
   tags: [ kerberos ]
-  title: Kerberos
-  description: Configure Kerberos client
+  title: _("Kerberos")
+  description: _("Configure Kerberos client")
   read_permissions: [ org.opensuse.yast.modules.yapi.kerberos.read ]
