- check vendor subdirectory for config files (bnc#628654) - 0.2.5

--- a/webclient/package/control_panel.yml
+++ b/webclient/package/control_panel.yml
@@ -1,4 +1,7 @@
 # This is a config file for WebYaST control center
+#
+# The file needs to be located under /etc/webyast/ or /etc/webyast/vendor/
+# (the 'vendor' directory has higher priority).
 
 --- 
 # timeout before automatic reloading of patches status (in seconds)
