fix location of rake tasks in code

--- a/plugins/users/Rakefile
+++ b/plugins/users/Rakefile
@@ -4,7 +4,7 @@ require File.join(RailsParent.parent, 'lib', 'tasks', 'common')
 # Deploy ?!
 
 #import rake task files from plugins directory 
-Dir.glob(File.dirname(__FILE__) + "/tasks/*.rake").each do |rake_file|
+Dir.glob(File.dirname(__FILE__) + "/lib/tasks/*.rake").each do |rake_file|
   import rake_file
 end
 
