--- a/webclient/config/lighttpd.conf
+++ b/webclient/config/lighttpd.conf
@@ -16,8 +16,11 @@ var.state_dir   = "/var/run"
 ## ---------------------
 ##
 #server.port = 80
-server.bind = "0.0.0.0"
+#server.bind = "0.0.0.0"
 server.port = 54984
+
+#Enable IPv6 and IPv4 
+#server.use-ipv6 = "enable"
 
 ssl.engine = "enable" 
 ssl.pemfile = "/etc/lighttpd/certs/webyast-combined.pem" 
