- symlink additional nginx files (instead of hard copying)
- 0.2.22

--- a/webclient/package/webyast-ui.lr.conf
+++ b/webclient/package/webyast-ui.lr.conf
@@ -6,7 +6,7 @@
     size=+4096k
     notifempty
     missingok
-    create 600 lighttpd lighttpd
+    create 600 nobody nobody
     postrotate
      /etc/init.d/yastwc reload
     endscript
