--- a/webclient/package/nginx.conf
+++ b/webclient/package/nginx.conf
@@ -16,7 +16,7 @@ events {
 
 http {
     # Note: passenger_root option is automatically updated by
-    # /etc/init.d/yastws script at start up
+    # /etc/init.d/yastwc script at start up
     passenger_root /usr/lib64/ruby/gems/1.8/gems/passenger-3.0.1;
     passenger_ruby /usr/bin/ruby;
     passenger_pool_idle_time 300;
