moved user nobody to nginx

--- a/webclient/package/nginx.conf
+++ b/webclient/package/nginx.conf
@@ -1,5 +1,5 @@
 
-user  nobody nobody;
+user  nginx nginx;
 worker_processes  1;
 
 #error_log  logs/error.log;
@@ -21,8 +21,8 @@ http {
     passenger_ruby /usr/bin/ruby;
     passenger_pool_idle_time 300;
     passenger_min_instances 0;
-    passenger_default_user nobody;
-    passenger_user nobody;
+    passenger_default_user nginx;
+    passenger_user nginx;
     passenger_max_pool_size 1;
     passenger_max_instances_per_app 1;
     passenger_spawn_method conservative;
@@ -56,9 +56,10 @@ http {
       ssl_certificate_key  /etc/lighttpd/certs/webyast.key;
 
       ssl_session_timeout  5m;
-
-      ssl_protocols  SSLv2 SSLv3 TLSv1;
-      ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
+      ssl_protocols TLSv1
+      ssl_ciphers ALL:!aNULL:!eNULL:!SSLv2:!LOW:!EXP:!MD5:@STRENGTH
+#      ssl_protocols  SSLv2 SSLv3 TLSv1;
+#      ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
       ssl_prefer_server_ciphers   on;
     }
 
