--- a/webclient/package/webyast-ui.lr.conf
+++ b/webclient/package/webyast-ui.lr.conf
@@ -6,7 +6,7 @@
     size=+4096k
     notifempty
     missingok
-    create 600 nobody nobody
+    create 600 nginx nginx
     postrotate
      /etc/init.d/yastwc reload
     endscript
