removed lighty stuff

--- a/webclient/package/webyast-ui.lr.conf
+++ b/webclient/package/webyast-ui.lr.conf
@@ -1,4 +1,4 @@
-/srv/www/yast/log/production.log /srv/www/yast/log/development.log /srv/www/yast/log/lighttpd.access.log /srv/www/yast/log/lighttpd.error.log {
+/srv/www/yast/log/production.log /srv/www/yast/log/development.log /var/log/nginx/error.log /var/log/nginx/access.log {
     compress
     dateext
     maxage 365
