--- a/webclient/package/nginx.conf
+++ b/webclient/package/nginx.conf
@@ -56,10 +56,8 @@ http {
       ssl_certificate_key  /etc/lighttpd/certs/webyast.key;
 
       ssl_session_timeout  5m;
-      ssl_protocols TLSv1
-      ssl_ciphers ALL:!aNULL:!eNULL:!SSLv2:!LOW:!EXP:!MD5:@STRENGTH
-#      ssl_protocols  SSLv2 SSLv3 TLSv1;
-#      ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
+      ssl_protocols TLSv1;
+      ssl_ciphers ALL:!aNULL:!eNULL:!SSLv2:!LOW:!EXP:!MD5:@STRENGTH;
       ssl_prefer_server_ciphers   on;
     }
 
