- fixed failed functional test in status module - UI improvment control panel (status area)

--- a/plugins/status/shortcuts.yml
+++ b/plugins/status/shortcuts.yml
@@ -1,5 +1,5 @@
 main:
-  icon: '/images/monitoring.png'
+  icon: '/icons/monitoring.png'
   url: /status
   groups: [ System ]
   tags: [ access]
@@ -7,3 +7,4 @@ main:
   description: _("Show system status")
   resources: [ status ]
   read_permissions: [ org.opensuse.yast.system.status.read ]
+
