- added support for "Recently used modules" based on user behaviour

--- a/plugins/firewall/shortcuts.yml
+++ b/plugins/firewall/shortcuts.yml
@@ -2,6 +2,7 @@ main:
   icon: '/icons/yast-firewall.png'
   url: /firewall
   groups: [ Network ]
+  main: [true]
   tags: [ access, security, firewall ]
   title: _("Firewall")
   description: _("Firewall settings")
