--- a/plugins/services/shortcuts.yml
+++ b/plugins/services/shortcuts.yml
@@ -3,6 +3,7 @@ main:
   icon: '/icons/yast-system.png'
   url: /services
   groups: [ System ]
+  main: [true]
   tags: [ init, script, service ]
   title: _("System Services")
   description: _("Manage the LSB init scripts")
