--- a/plugins/software/shortcuts.yml
+++ b/plugins/software/shortcuts.yml
@@ -2,6 +2,7 @@ main:
   icon: '/icons/yast-online_update.png'
   url: /patch_updates
   groups: [ System ]
+  main: [true]
   tags: [ security, software, updates, patches]
   title: Updates
   description: See and install updates
