--- a/plugins/users/shortcuts.yml
+++ b/plugins/users/shortcuts.yml
@@ -2,6 +2,7 @@ main:
   icon: '/icons/yast-users.png'
   url: /users
   groups: [ Accounts ]
+  main: [true]
   tags: [ users, account, security, access]
   title: _("Users")
   description: _("Manage user accounts")
