--- a/plugins/status/shortcuts.yml
+++ b/plugins/status/shortcuts.yml
@@ -2,6 +2,7 @@ main:
   icon: '/icons/monitoring.png'
   url: /status
   groups: [ System ]
+  main: [true]
   tags: [ access]
   title: _("Status")
   description: _("Show system status")
