- reallocated some module in another categories

--- a/plugins/kerberos/shortcuts.yml
+++ b/plugins/kerberos/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '../icons/yast-kerberos.png'
   url: /kerberos
-  groups: [ System ]
+  groups: [ Network ]
   tags: [ kerberos ]
   title: _("Kerberos")
   description: _("Configure Kerberos client")
