--- a/plugins/ldap/shortcuts.yml
+++ b/plugins/ldap/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '../icons/yast-ldap.png'
   url: /ldap
-  groups: [ System ]
+  groups: [ Network ]
   tags: [ ldap ]
   title: _("LDAP")
   description: _("Configure LDAP client")
