--- a/plugins/roles/shortcuts.yml
+++ b/plugins/roles/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '/icons/yast-permissions.png'
   url: /roles
-  groups: [ System ]
+  groups: [ Accounts ]
   tags: [ roles ]
   title: _("Roles")
   description: _("Set permissions in roles and assign users to roles")
