--- a/plugins/activedirectory/shortcuts.yml
+++ b/plugins/activedirectory/shortcuts.yml
@@ -1,7 +1,7 @@
 main:
   icon: '../icons/yast-samba-client.png'
   url: /activedirectory
-  groups: [ System ]
+  groups: [ Network ]
   tags: [ AD, Samba, Active Directory ]
   title: _("Active Directory")
   description: _("Configure the connection to Active Directory")
