--- a/plugins/kerberos/shortcuts.yml
+++ b/plugins/kerberos/shortcuts.yml
@@ -1,5 +1,5 @@
 main:
-  icon: '../icons/yast-kerberos.png'
+  icon: '/icons/yast-kerberos.png'
   url: /kerberos
   groups: [ Network ]
   tags: [ kerberos ]
