--- a/webclient/package/nginx.conf
+++ b/webclient/package/nginx.conf
@@ -42,7 +42,16 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    #gzip  on;
+    gzip              on;
+    gzip_static       on;
+    gzip_buffers      16 8k;
+    gzip_comp_level   9;
+    gzip_http_version 1.0;
+    gzip_proxied      any;
+    gzip_min_length   0; 
+    gzip_types        text/plain text/css image/x-icon image/png image/gif image/jpeg application/x-javascript text/javascript;
+    gzip_vary         on;
+
 
     server {
       listen 54984;
@@ -59,6 +68,12 @@ http {
       ssl_protocols TLSv1;
       ssl_ciphers ALL:!aNULL:!eNULL:!SSLv2:!LOW:!EXP:!MD5:@STRENGTH;
       ssl_prefer_server_ciphers   on;
+      
+      location ~* \.(png|gif|jpg|jpeg|css|js|swf|ico)(\?[0-9]+)?$ {
+        access_log off;
+        expires max;
+        add_header Cache-Control public;
+      }
     }
 
 }
