fix serving plugins public parts

--- a/webclient/package/nginx.conf
+++ b/webclient/package/nginx.conf
@@ -68,8 +68,9 @@ http {
       ssl_protocols TLSv1;
       ssl_ciphers ALL:!aNULL:!eNULL:!SSLv2:!LOW:!EXP:!MD5:@STRENGTH;
       ssl_prefer_server_ciphers   on;
-      
+
       location ~* \.(png|gif|jpg|jpeg|css|js|swf|ico)(\?[0-9]+)?$ {
+        passenger_enabled on;
         access_log off;
         expires max;
         add_header Cache-Control public;
