--- a/plugins/example_plugin/shortcuts.yml
+++ b/plugins/example_plugin/shortcuts.yml
@@ -1,5 +1,5 @@
 main:
-  icon: '/icons/yast-product-registration.png'
+  icon: '/icons/example_plugin.png'
   url: /example
   groups: [ System ]
   title: _("Example")
